Update favicon link in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/ChatGPT Image Sep 19, 2025, 01_36_18 PM.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/Bunnah_logo_no_bg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>بـُنة</title>
   </head>
